* Reverse color for income values on home page view